fix footer padding-bottom on mobile

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -687,6 +687,11 @@ h5 {
 }
 
 .footer {
+  padding-bottom: s(100);
+  @media (min-width: 992px) {
+    padding-bottom: 0;
+  }
+
   ul {
     li {
       a {
